plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.2'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.olsaram'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'io.github.cdimascio:dotenv-java:3.2.0'
	

	implementation 'org.springframework.boot:spring-boot-starter-webflux'


	// JSON 파싱용 라이브러리 추가
	implementation 'org.json:json:20240303'

	//Lombok((Getter/Setter, ConfigProperties용))
	implementation 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	//Spring Boot @ConfigurationProperties용 (경고 제거)
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'


	// OpenAI API Client
	implementation 'com.theokanning.openai-gpt3-java:client:0.10.0'
	// DB
	runtimeOnly 'com.mysql:mysql-connector-j'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'com.h2database:h2'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
